Fixed layout issues.

--- a/www/resources/lab-report.css
+++ b/www/resources/lab-report.css
@@ -300,7 +300,7 @@ ul#resources-list {
 	width: 158px;
 	list-style-type: none;
 	border: 1px solid #808080;
-	font-style: verdana,helvetica,arial,sans-serif;
+	font-family: verdana,helvetica,arial,sans-serif;
 	font-weight: bold;
 	font-size: 10px;
 	margin: 3em 0 0 0;
@@ -347,7 +347,7 @@ ul#resources-list li a:hover {
 
 /* Feedback container */
 #lr-feedback-container {
-        background-color: #CCFF99;
+
 }
 
 #lr-feedback-container ul {
@@ -356,11 +356,10 @@ ul#resources-list li a:hover {
 	list-style-type: none;
 	font-family: verdana, arial, sans-serif;
 	font-size: x-small;
-        background-color: #CCFF99;
 }
 
 #lr-feedback-container ul li {
-        background-color: #CCFF99;
+
 }
 
 #lr-feedback-container ul li.title {
@@ -369,7 +368,6 @@ ul#resources-list li a:hover {
 	font-weight: bold;
 	color: #686868;
 	font-size: x-small;
-        background-color: #CCFF99;
 }
 
 #lr-feedback-container ul li.edit {
@@ -377,7 +375,6 @@ ul#resources-list li a:hover {
 	padding-bottom: 0.5em;
 	padding-right: 0.5em;
 	font-size: small;
-        background-color: #CCFF99;
 }
 
 #lr-feedback-container ul li.edit a {
